fix: move code to java8